--- a/www/package.json
+++ b/www/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-eco": "^0.1.0",
     "grunt-template": "^0.2.3",
     "grunt-template-module": "^0.3.2"
   }
