--- a/www/package.json
+++ b/www/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-coffee": "^0.10.1",
     "grunt-contrib-compass": "^0.9.0",
@@ -12,6 +13,7 @@
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-eco": "^0.1.0",
     "grunt-template": "^0.2.3",
     "grunt-template-module": "^0.3.2"
   }
