--- a/www/Gemfile
+++ b/www/Gemfile
@@ -3,4 +3,4 @@ source 'https://rubygems.org'
 gem 'compass'
 gem 'sass'
 gem 'sass-css-importer'
-
+gem 'web_blocks', :git => 'https://github.com/WebBlocks/WebBlocks.git'
