--- a/www/package.json
+++ b/www/package.json
@@ -2,6 +2,7 @@
   "name": "ohmage-mwf",
   "version": "0.1.0",
   "devDependencies": {
+    "bower": "^1.3.12",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.5.0",
