--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "ohmage-mwf",
+  "author": {
+    "name": "Ohmage Team",
+    "email": "rrocchio@oit.ucla.edu",
+    "url": "http://ohmage.org"
+  },
+  "description": "An open-source participatory sensing technology platform.",
   "version": "0.2.0",
+  "config": {
+    "app_name": "Ohmage MWF",
+    "bundle_id": "org.ohmage.mwf"
+  },
   "devDependencies": {
     "bower": "^1.3.12",
     "grunt": "^0.4.5",
@@ -14,7 +24,9 @@
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-cordovacli": "^0.5.1",
     "grunt-eco": "^0.1.0",
+    "grunt-exec": "^0.4.6",
     "grunt-template": "^0.2.3",
     "grunt-template-module": "^0.3.2"
   }
