--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "version": "3.0.0",
   "devDependencies": {
     "bower": "^1.3.12",
+    "cordova": "^4.3.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.5.0",
