--- a/www/bower.json
+++ b/www/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "ohmage-mwf-dw",
-  "version": "1.0.0",
+  "name": "ohmageX",
+  "version": "3.0.3",
   "dependencies": {
     "WebBlocks-block-visibility": "WebBlocks/block-visibility",
     "WebBlocks-wrapper-normalize.csss": "WebBlocks/wrapper-normalize.css"
